--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "7.2.1",
     "axios": "0.20.0",
     "bootstrap": "4.5.2",
+    "chart.js": "3.6.2",
     "jquery": "3.5.1",
     "popper.js": "1.16.1",
     "react": "16.13.1",
@@ -15,6 +16,7 @@
     "react-bootstrap-table2-filter": "1.3.3",
     "react-bootstrap-table2-paginator": "2.1.2",
     "react-bootstrap-table2-toolkit": "2.1.3",
+    "react-chartjs-2": "4.0.0",
     "react-dom": "16.13.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.3"
